// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`formatComment snapshots must · essentiality · with line 1`] = `
{
  "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · 🎯 essentiality">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "🚨 must · 🐛 issue · 🎯 essentiality | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots must · essentiality · without line 1`] = `
{
  "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · 🎯 essentiality">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "🚨 must · 🐛 issue · 🎯 essentiality | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots must · acceptance · with line 1`] = `
{
  "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · ✅ acceptance">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "🚨 must · 🐛 issue · ✅ acceptance | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots must · acceptance · without line 1`] = `
{
  "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · ✅ acceptance">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "🚨 must · 🐛 issue · ✅ acceptance | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots must · scope · with line 1`] = `
{
  "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · 📦 scope">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "🚨 must · 🐛 issue · 📦 scope | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots must · scope · without line 1`] = `
{
  "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · 📦 scope">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "🚨 must · 🐛 issue · 📦 scope | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots must · alignment · with line 1`] = `
{
  "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · 🧭 alignment">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "🚨 must · 🐛 issue · 🧭 alignment | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots must · alignment · without line 1`] = `
{
  "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · 🧭 alignment">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "🚨 must · 🐛 issue · 🧭 alignment | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots must · quality · with line 1`] = `
{
  "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · ✨ quality">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "🚨 must · 🐛 issue · ✨ quality | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots must · quality · without line 1`] = `
{
  "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · ✨ quality">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "🚨 must · 🐛 issue · ✨ quality | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots should · essentiality · with line 1`] = `
{
  "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · 🎯 essentiality">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "⚠️ should · 🙋 question · 🎯 essentiality | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots should · essentiality · without line 1`] = `
{
  "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · 🎯 essentiality">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "⚠️ should · 🙋 question · 🎯 essentiality | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots should · acceptance · with line 1`] = `
{
  "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · ✅ acceptance">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "⚠️ should · 🙋 question · ✅ acceptance | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots should · acceptance · without line 1`] = `
{
  "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · ✅ acceptance">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "⚠️ should · 🙋 question · ✅ acceptance | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots should · scope · with line 1`] = `
{
  "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · 📦 scope">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "⚠️ should · 🙋 question · 📦 scope | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots should · scope · without line 1`] = `
{
  "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · 📦 scope">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "⚠️ should · 🙋 question · 📦 scope | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots should · alignment · with line 1`] = `
{
  "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · 🧭 alignment">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "⚠️ should · 🙋 question · 🧭 alignment | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots should · alignment · without line 1`] = `
{
  "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · 🧭 alignment">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "⚠️ should · 🙋 question · 🧭 alignment | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots should · quality · with line 1`] = `
{
  "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · ✨ quality">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "⚠️ should · 🙋 question · ✨ quality | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots should · quality · without line 1`] = `
{
  "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · ✨ quality">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "⚠️ should · 🙋 question · ✨ quality | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots want · essentiality · with line 1`] = `
{
  "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · 🎯 essentiality">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "💡 want · 🙋 question · 🎯 essentiality | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots want · essentiality · without line 1`] = `
{
  "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · 🎯 essentiality">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "💡 want · 🙋 question · 🎯 essentiality | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots want · acceptance · with line 1`] = `
{
  "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · ✅ acceptance">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "💡 want · 🙋 question · ✅ acceptance | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots want · acceptance · without line 1`] = `
{
  "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · ✅ acceptance">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "💡 want · 🙋 question · ✅ acceptance | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots want · scope · with line 1`] = `
{
  "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · 📦 scope">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "💡 want · 🙋 question · 📦 scope | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots want · scope · without line 1`] = `
{
  "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · 📦 scope">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "💡 want · 🙋 question · 📦 scope | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots want · alignment · with line 1`] = `
{
  "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · 🧭 alignment">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "💡 want · 🙋 question · 🧭 alignment | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots want · alignment · without line 1`] = `
{
  "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · 🧭 alignment">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "💡 want · 🙋 question · 🧭 alignment | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots want · quality · with line 1`] = `
{
  "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · ✨ quality">
<text><dim>📁 src/example.ts:42</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "💡 want · 🙋 question · ✨ quality | src/example.ts:42 — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`formatComment snapshots want · quality · without line 1`] = `
{
  "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · ✨ quality">
<text><dim>📁 src/example.ts</dim></text>
<spacer size="1" />
<text>サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。</text>
</box>"
,
  "summary": "💡 want · 🙋 question · ✨ quality | src/example.ts — サンプルの詳細テキスト。レビュー指摘の内容がここに入ります。",
}
`;

exports[`buildHunkComments integration generates markup and summary for mixed axes with and without line 1`] = `
[
  {
    "filePath": "src/a.ts",
    "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · 🎯 essentiality">
<text><dim>📁 src/a.ts:10</dim></text>
<spacer size="1" />
<text>essential must detail</text>
</box>"
,
    "newLine": 10,
    "summary": "🚨 must · 🐛 issue · 🎯 essentiality | src/a.ts:10 — essential must detail",
  },
  {
    "filePath": "src/b.ts",
    "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · 🎯 essentiality">
<text><dim>📁 src/b.ts</dim></text>
<spacer size="1" />
<text>essential should detail</text>
</box>"
,
    "summary": "⚠️ should · 🙋 question · 🎯 essentiality | src/b.ts — essential should detail",
  },
  {
    "filePath": "src/c.ts",
    "markup": 
"<box border border-color="muted" padding-x="1" padding-y="1" title="💡 want · 🙋 question · ✅ acceptance">
<text><dim>📁 src/c.ts:5</dim></text>
<spacer size="1" />
<text>acceptance want detail</text>
</box>"
,
    "oldLine": 5,
    "summary": "💡 want · 🙋 question · ✅ acceptance | src/c.ts:5 — acceptance want detail",
  },
  {
    "filePath": "src/d.ts",
    "markup": 
"<box border border-color="danger" padding-x="1" padding-y="1" title="🚨 must · 🐛 issue · 🧭 alignment">
<text><dim>📁 src/d.ts:99</dim></text>
<spacer size="1" />
<text>align must &lt;escape&gt; &amp; test</text>
</box>"
,
    "newLine": 99,
    "summary": "🚨 must · 🐛 issue · 🧭 alignment | src/d.ts:99 — align must <escape> & test",
  },
  {
    "filePath": "src/e.ts",
    "markup": 
"<box border border-color="warning" padding-x="1" padding-y="1" title="⚠️ should · 🙋 question · ✨ quality">
<text><dim>📁 src/e.ts</dim></text>
<spacer size="1" />
<text>quality should detail<br/>second line</text>
</box>"
,
    "summary": "⚠️ should · 🙋 question · ✨ quality | src/e.ts — quality should detail",
  },
]
`;
